// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CarouselBox /> render CarouselBox with default props 1`] = `
<div
  className="mfui-beta-carousel-box"
>
  <Carousel>
    <div>
      test
    </div>
  </Carousel>
</div>
`;

exports[`<CarouselBox /> render CarouselBox with props 1`] = `
<div
  className="mfui-beta-carousel-box"
>
  <Carousel
    autoPlay={true}
    autoPlayDelay={10}
    classes={
      Object {
        "innerIndents": "testInnerClass",
        "root": "testClassName",
      }
    }
    loop={true}
    navTheme="green"
    onChange={[MockFunction]}
    onNextClick={[MockFunction]}
    onPrevClick={[MockFunction]}
  >
    <div>
      test
    </div>
  </Carousel>
</div>
`;
